[metadata]
name = ml2
version = attr: ml2.__version__
description = Machine Learning for Mathematics and Logics
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    machine learning
    deep learning
    mathematics
    logics
    neural-symbolic
    system 2
license = MIT License
license_file = LICENSE
url = https://github.com/reactive-systems/ml2
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
install_requires =
    docker
    google-cloud-storage
    grpcio
    jupyter
    matplotlib
    nltk
    numpy
    pandas
    ray[default]
    sly
    tensorflow>=2.4.0
    tqdm
    wandb
python_requires = >=3.7

[options.extras_require]
dev = 
    grpcio-tools
    pylint
    rstcheck
    sphinx==4.0.2
    yapf
package =
    setuptools>=46.4
    wheel
    build
    twine

