[metadata]
name = ml2
version = attr: ml2.__version__
description = Machine Learning for Mathematics and Logics
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
    machine learning
    deep learning
    mathematics
    logics
    neural-symbolic
    system 2
license = MIT License
license_file = LICENSE
url = https://github.com/reactive-systems/ml2
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
install_requires =
    docker
    google-cloud-storage
    grpcio
    jupyter
    matplotlib
    nltk
    numpy
    pandas
    ray[default, tune]
    sly
    tensorflow>=2.4.0
    tqdm
    wandb
    rbql
python_requires = >=3.8

[options.extras_require]
dev =
    black
    flake8
    flake8-quotes
    grpcio-tools
    mypy
    pre-commit
    rstcheck
    sphinx==4.0.2
package =
    setuptools>=46.4
    wheel
    build
    twine

[flake8]
exclude =
    .git,
    __pycache__,
    dist,
    *pb2.py,
    *pb2_grpc.py
ignore =
    # whitespace before ':'
    E203,
    # line too long
    E501,
    # ambiguous variable name
    E741,
    # line break before binary operator
    W503
max-line-length = 99
per-file-ignores =
    # imported but unused
    __init__.py: F401
inline-quotes = double
